--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
 
         body {
-            background-image: url(https://drive.google.com/file/d/10yzYzH8fKYbab_5yKOKlMJXfY-SveCfn/view?usp=sharing);
+            background-image: url(bg-img.jpeg);
             overflow: hidden;
             color: rgb(45, 0, 0);
         }
